--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Robin\\Bangla\\Date\\": "src/"
+            "S1K3\\Bangla\\Date\\": "src/"
         },
         "files":[
             "src/helper/bangla_date.php"
@@ -24,7 +24,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Robin\\Bangla\\Date\\BanglaDateServiceProvider"
+                "S1K3\\Bangla\\Date\\BanglaDateServiceProvider"
             ]
         }
     }
