Vendor Name Updated

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "robin/bangla-date",
+    "name": "s1k3/bangla-date",
     "description": "Convert English date to corresponding Bangla Date",
     "type": "library",
     "license": "MIT",
